[gd_scene load_steps=18 format=3 uid="uid://cv3avlivauw0p"]

[ext_resource type="PackedScene" uid="uid://cd7otm4lflmtx" path="res://animation_retargeting/models/gdbot-noik.glb" id="1_241xh"]
[ext_resource type="PackedScene" uid="uid://bbtd6s8t8dnum" path="res://animation_retargeting/models/mini_sophia_noik.glb" id="1_d2w5j"]
[ext_resource type="PackedScene" uid="uid://ct55ii5h0dbf2" path="res://animation_retargeting/models/RobotDanceModel.glb" id="1_i8uby"]
[ext_resource type="Script" path="res://animation_retargeting/scripts/camera_control.gd" id="1_tix1y"]
[ext_resource type="AnimationLibrary" uid="uid://ckcknbqn7xbcn" path="res://animation_retargeting/models/RobotDanceLibrary.glb" id="2_4y8rl"]
[ext_resource type="Material" path="res://shared/models/gdbot/materials/gdbot_face_mat.tres" id="4_4qd0u"]
[ext_resource type="Script" path="res://animation_retargeting/scripts/bob.gd" id="6_h0syc"]
[ext_resource type="Shader" path="res://animation_retargeting/assets/shader/giant_screen_shader.gdshader" id="7_7y4fq"]
[ext_resource type="Script" path="res://animation_retargeting/scripts/look_at_target.gd" id="7_qcifm"]
[ext_resource type="AudioStream" uid="uid://cuhb10fbjgmyq" path="res://animation_retargeting/assets/music/Gang$tazz.mp3" id="7_uyuc6"]

[sub_resource type="Sky" id="Sky_8t4nh"]

[sub_resource type="Environment" id="Environment_57wsp"]
background_mode = 1
sky = SubResource("Sky_8t4nh")
tonemap_mode = 2
ssil_enabled = true
sdfgi_read_sky_light = false
sdfgi_y_scale = 0
sdfgi_energy = 0.1
glow_enabled = true
glow_normalized = true
glow_intensity = 1.2
glow_bloom = 0.5
volumetric_fog_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_sikh4"]
dof_blur_far_enabled = true
dof_blur_far_distance = 6.0

[sub_resource type="PlaneMesh" id="PlaneMesh_tn1i2"]
size = Vector2(20, 10)

[sub_resource type="ViewportTexture" id="ViewportTexture_gpseb"]
viewport_path = NodePath("GiantScreenViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tgrwk"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("7_7y4fq")
shader_parameter/camera_sampler = SubResource("ViewportTexture_gpseb")

[sub_resource type="PlaneMesh" id="PlaneMesh_fva8d"]
size = Vector2(10, 5)

[node name="AnimatonRetargeting" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_57wsp")

[node name="GiantScreenViewport" type="SubViewport" parent="."]
size = Vector2i(512, 256)
script = ExtResource("1_tix1y")

[node name="GeneralCameraAnchor" type="Node3D" parent="GiantScreenViewport"]
unique_name_in_owner = true
transform = Transform3D(0.573576, -0.0571412, 0.817157, 0, 0.997564, 0.0697565, -0.819152, -0.0400107, 0.572179, 0, 1, 0)

[node name="GeneralCamera" type="Camera3D" parent="GiantScreenViewport/GeneralCameraAnchor"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)
current = true
fov = 25.0
size = 4.0

[node name="SideCamera" type="Node3D" parent="GiantScreenViewport"]
transform = Transform3D(0.619094, -0.203255, 0.758558, 1.6577e-08, 0.965926, 0.258819, -0.785317, -0.160233, 0.597999, 0, 0.8, 0.3)

[node name="SideCamera" type="Camera3D" parent="GiantScreenViewport/SideCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 5.96046e-08, 6)
current = true
fov = 25.0
size = 4.0

[node name="TopCamera" type="Node3D" parent="GiantScreenViewport"]
transform = Transform3D(0.684547, 0.313829, -0.657956, 0, 0.902585, 0.430511, 0.728969, -0.294705, 0.617862, 0, 0.8, 0.3)

[node name="TopCamera" type="Camera3D" parent="GiantScreenViewport/TopCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 8)
current = true
fov = 25.0
size = 4.0

[node name="mini_sophia_noik" parent="." instance=ExtResource("1_d2w5j")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 1, 0, -0.4)

[node name="GeneralSkeleton" parent="mini_sophia_noik/Armature" index="0"]
bones/0/position = Vector3(-0.000666389, 0.138061, 0.00218195)
bones/0/rotation = Quaternion(0.000997488, -0.0882294, -0.0282757, 0.995698)
bones/1/rotation = Quaternion(0.0313482, 0.0193715, 0.0286159, 0.998911)
bones/2/rotation = Quaternion(0.420218, 0.565544, 0.495662, -0.507835)
bones/3/rotation = Quaternion(0.623014, 0.78155, -0.0181304, 0.0265579)
bones/4/rotation = Quaternion(0.0236081, -0.706713, 0.0236081, 0.706713)
bones/5/rotation = Quaternion(-0.0821124, 0.69593, 0.121647, 0.702952)
bones/15/rotation = Quaternion(-0.313595, 0.601479, 0.665975, 0.310416)
bones/16/rotation = Quaternion(-0.397719, 0.915952, 0.0225961, 0.0483872)
bones/17/rotation = Quaternion(0.0827408, 0.702249, -0.0827407, 0.702249)
bones/18/rotation = Quaternion(-0.363015, -0.700912, -0.229303, 0.569529)
bones/27/rotation = Quaternion(-0.162836, -0.711625, -0.174587, 0.660753)
bones/28/rotation = Quaternion(-0.0199453, -0.00739252, 0.0315643, 0.999276)
bones/29/rotation = Quaternion(0.00236704, -0.00933571, 0.0828213, 0.996518)
bones/30/rotation = Quaternion(-0.129466, -0.0371536, -0.985515, 0.103049)
bones/31/rotation = Quaternion(0.00217517, 0.9942, -0.0832551, 0.0680435)
bones/32/rotation = Quaternion(0.0381435, 0.685162, -0.714462, 0.136536)
bones/33/rotation = Quaternion(-0.0586787, 0.0481782, 0.996042, 0.046218)
bones/34/rotation = Quaternion(0.0263684, 0.996263, -0.0380116, -0.0729373)
bones/35/rotation = Quaternion(0.111296, 0.746128, -0.654416, -0.0514341)

[node name="AnimationPlayer" type="AnimationPlayer" parent="mini_sophia_noik"]
libraries = {
"RobotDanceLibrary": ExtResource("2_4y8rl")
}
autoplay = "RobotDanceLibrary/Robot Hip Hop Dance"

[node name="gdbot-noik" parent="." instance=ExtResource("1_241xh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.4)

[node name="GeneralSkeleton" parent="gdbot-noik/Armature" index="0"]
bones/0/position = Vector3(-0.00193779, 0.401465, 0.00634487)
bones/0/rotation = Quaternion(0.000997488, -0.0882294, -0.0282757, 0.995698)
bones/1/rotation = Quaternion(0.0313482, 0.0193715, 0.0286159, 0.998911)
bones/2/rotation = Quaternion(-0.0199453, -0.00739251, 0.0315643, 0.999275)
bones/3/rotation = Quaternion(0.00236704, -0.00933571, 0.0828213, 0.996518)
bones/4/rotation = Quaternion(0.420218, 0.565544, 0.495662, -0.507835)
bones/5/rotation = Quaternion(0.623014, 0.78155, -0.0181304, 0.0265579)
bones/6/rotation = Quaternion(0.0236081, -0.706713, 0.0236081, 0.706713)
bones/7/rotation = Quaternion(-0.0821124, 0.69593, 0.121647, 0.702952)
bones/16/rotation = Quaternion(-0.170258, 0.708142, 0.174228, 0.662716)
bones/17/rotation = Quaternion(0.00814529, 0.00629619, -0.0210347, 0.999726)
bones/18/rotation = Quaternion(0.313595, -0.601479, -0.665975, -0.310416)
bones/19/rotation = Quaternion(-0.397719, 0.915952, 0.0225961, 0.0483872)
bones/20/rotation = Quaternion(0.0827408, 0.702249, -0.0827407, 0.702249)
bones/21/rotation = Quaternion(-0.363015, -0.700912, -0.229303, 0.569529)
bones/30/rotation = Quaternion(-0.162836, -0.711625, -0.174587, 0.660753)
bones/31/rotation = Quaternion(-0.00747561, 0.00145657, 0.0217411, 0.999735)
bones/32/rotation = Quaternion(0.129466, 0.0371536, 0.985515, -0.103049)
bones/33/rotation = Quaternion(0.00217517, 0.9942, -0.0832551, 0.0680435)
bones/34/rotation = Quaternion(0.0381435, 0.685162, -0.714462, 0.136536)
bones/35/rotation = Quaternion(-0.0586787, 0.0481782, 0.996042, 0.046218)
bones/36/rotation = Quaternion(0.0263684, 0.996263, -0.0380116, -0.0729373)
bones/37/rotation = Quaternion(0.111296, 0.746128, -0.654416, -0.0514341)

[node name="gdbot_mesh" parent="gdbot-noik/Armature/GeneralSkeleton" index="0"]
surface_material_override/1 = ExtResource("4_4qd0u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="gdbot-noik"]
libraries = {
"RobotDanceLibrary": ExtResource("2_4y8rl")
}
autoplay = "RobotDanceLibrary/Robot Hip Hop Dance"

[node name="RobotDanceModel" parent="." instance=ExtResource("1_i8uby")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -0.4)

[node name="GeneralSkeleton" parent="RobotDanceModel/Armature" index="0"]
bones/0/position = Vector3(-0.00499328, 1.03449, 0.0163494)
bones/0/rotation = Quaternion(0.000997488, -0.0882294, -0.0282757, 0.995698)
bones/1/rotation = Quaternion(0.0313482, 0.0193715, 0.0286159, 0.998911)
bones/2/rotation = Quaternion(-0.0114886, 0.00267423, -0.0145072, 0.999825)
bones/3/rotation = Quaternion(-0.0114133, 0.00265043, -0.0145709, 0.999825)
bones/4/rotation = Quaternion(-0.0199453, -0.00739252, 0.0315643, 0.999276)
bones/5/rotation = Quaternion(0.00236704, -0.00933571, 0.0828213, 0.996518)
bones/7/rotation = Quaternion(-0.313595, 0.601479, 0.665975, 0.310416)
bones/8/rotation = Quaternion(-0.397719, 0.915952, 0.0225961, 0.0483872)
bones/9/rotation = Quaternion(0.0827408, 0.702249, -0.0827407, 0.702249)
bones/10/rotation = Quaternion(-0.363015, -0.700912, -0.229303, 0.569529)
bones/11/position = Vector3(0.0268184, 0.0246446, 0.0157281)
bones/11/rotation = Quaternion(-0.132363, -0.00639215, 0.0892194, 0.987157)
bones/12/rotation = Quaternion(-0.162836, -0.711625, -0.174587, 0.660753)
bones/13/rotation = Quaternion(-0.00747561, 0.00145657, 0.0217411, 0.999735)
bones/14/rotation = Quaternion(-4.47035e-08, -1.49012e-08, 0, 1)
bones/15/position = Vector3(0.0226005, 0.0910792, 0.00516654)
bones/15/rotation = Quaternion(0.0301351, -4.90248e-06, 0.00383642, 0.999539)
bones/16/rotation = Quaternion(0.0769361, -5.48363e-06, 0.00912142, 0.996994)
bones/17/rotation = Quaternion(0.0717634, 6.72042e-06, 0.00883403, 0.997383)
bones/18/rotation = Quaternion(2.98023e-08, 1.49012e-08, 0, 1)
bones/19/position = Vector3(2.15491e-06, 0.0953222, -1.17905e-05)
bones/19/rotation = Quaternion(0.0702011, -3.52114e-05, 0.00905594, 0.997492)
bones/20/rotation = Quaternion(0.0782703, -1.20252e-05, 0.00869188, 0.996894)
bones/21/rotation = Quaternion(0.0726618, 2.72095e-05, 0.0091767, 0.997314)
bones/22/rotation = Quaternion(0, 0, 2.98023e-08, 1)
bones/23/position = Vector3(-0.018649, 0.0910332, 0.000418475)
bones/23/rotation = Quaternion(0.121428, 1.89245e-05, 0.0146438, 0.992492)
bones/24/rotation = Quaternion(0.0811659, 7.46548e-06, 0.0101129, 0.996649)
bones/25/rotation = Quaternion(0.0719172, -1.75834e-05, 0.00887716, 0.997371)
bones/26/rotation = Quaternion(1.49012e-08, -4.47035e-08, -1.49012e-08, 1)
bones/27/position = Vector3(-0.0380605, 0.0807655, 0.00485498)
bones/27/rotation = Quaternion(0.168032, 8.74698e-05, 0.0199663, 0.985579)
bones/28/rotation = Quaternion(0.0765521, 0.000144392, 0.0084857, 0.99703)
bones/29/rotation = Quaternion(0.0715712, 0.000159904, 0.00921798, 0.997393)
bones/30/rotation = Quaternion(0, 2.98023e-08, 5.96046e-08, 1)
bones/31/rotation = Quaternion(0.420218, 0.565544, 0.495662, -0.507835)
bones/32/rotation = Quaternion(0.623014, 0.78155, -0.0181304, 0.0265579)
bones/33/rotation = Quaternion(0.0236081, -0.706713, 0.0236081, 0.706713)
bones/34/rotation = Quaternion(-0.0821124, 0.69593, 0.121647, 0.702952)
bones/35/position = Vector3(-0.0268176, 0.0246587, 0.0157774)
bones/35/rotation = Quaternion(-0.0542851, -0.00956395, -0.0384265, 0.99774)
bones/36/rotation = Quaternion(-0.170258, 0.708142, 0.174228, 0.662716)
bones/37/rotation = Quaternion(0.00814529, 0.00629619, -0.0210347, 0.999726)
bones/38/rotation = Quaternion(1.49012e-08, 1.49012e-08, -2.98023e-08, 1)
bones/39/position = Vector3(-0.0225987, 0.091091, 0.00519662)
bones/39/rotation = Quaternion(0.0687862, -2.99513e-06, -0.00825691, 0.997597)
bones/40/rotation = Quaternion(0.0622335, 1.07288e-06, -0.00761491, 0.998033)
bones/41/rotation = Quaternion(0.0971853, 5.54323e-06, -0.0116623, 0.995198)
bones/42/rotation = Quaternion(0, 1.49012e-08, 1.49012e-08, 1)
bones/43/position = Vector3(-6.68604e-07, 0.0953312, 1.58727e-05)
bones/43/rotation = Quaternion(0.105752, -3.47197e-06, -0.0127311, 0.994311)
bones/44/rotation = Quaternion(0.0662327, -2.69711e-06, -0.00801387, 0.997772)
bones/45/rotation = Quaternion(0.0958276, -1.19209e-07, -0.0115853, 0.995331)
bones/46/rotation = Quaternion(2.98023e-08, 2.98023e-08, 2.98023e-08, 1)
bones/47/position = Vector3(0.0186505, 0.0910428, 0.000446418)
bones/47/rotation = Quaternion(0.155043, 8.49366e-07, -0.0187169, 0.987731)
bones/48/rotation = Quaternion(0.0687431, 8.9407e-07, -0.00829583, 0.9976)
bones/49/rotation = Quaternion(0.0950323, 1.08778e-06, -0.0114685, 0.995408)
bones/50/rotation = Quaternion(7.45058e-08, -1.49012e-08, -2.98023e-08, 1)
bones/51/position = Vector3(0.0380628, 0.0807747, 0.00488485)
bones/51/rotation = Quaternion(0.196571, 0.00762214, -0.0608906, 0.978567)
bones/52/rotation = Quaternion(0.0658734, 0.00246374, 0.0281003, 0.997429)
bones/53/rotation = Quaternion(0.0968086, 0.000348613, -0.0116162, 0.995235)
bones/54/rotation = Quaternion(-2.98023e-08, 0, 0, 1)
bones/55/rotation = Quaternion(-0.0586787, 0.0481782, 0.996042, 0.046218)
bones/56/rotation = Quaternion(0.0263684, 0.996263, -0.0380116, -0.0729373)
bones/57/rotation = Quaternion(0.111296, 0.746128, -0.654416, -0.0514341)
bones/58/rotation = Quaternion(-0.000253524, 0.999413, 0.0238165, 0.0246169)
bones/60/rotation = Quaternion(-0.129466, -0.0371536, -0.985515, 0.103049)
bones/61/rotation = Quaternion(0.00217517, 0.9942, -0.0832551, 0.0680435)
bones/62/rotation = Quaternion(0.0381435, 0.685162, -0.714462, 0.136536)
bones/63/rotation = Quaternion(-1.49215e-07, 0.999962, 0.00869405, -5.93121e-09)

[node name="AnimationPlayer" parent="RobotDanceModel" index="1"]
autoplay = "Robot Hip Hop Dance"

[node name="CameraAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 5)

[node name="Camera3D" type="Camera3D" parent="CameraAnchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.2)
attributes = SubResource("CameraAttributesPractical_sikh4")
fov = 40.0
script = ExtResource("6_h0syc")

[node name="RobotDancerHips" type="BoneAttachment3D" parent="."]
transform = Transform3D(0.982832, 0.0561321, -0.175756, -0.0564842, 0.998399, 0.0030031, 0.175643, 0.00697589, 0.984429, -1.00499, 1.03449, -0.383651)
bone_name = "Hips"
bone_idx = 0
use_external_skeleton = true
external_skeleton = NodePath("../RobotDanceModel/Armature/GeneralSkeleton")

[node name="GdBotHips" type="BoneAttachment3D" parent="."]
transform = Transform3D(0.982832, 0.0561322, -0.175756, -0.0564842, 0.998399, 0.0030031, 0.175643, 0.00697589, 0.984429, -0.00193779, 0.401465, 0.406345)
bone_name = "Hips"
bone_idx = 0
use_external_skeleton = true
external_skeleton = NodePath("../gdbot-noik/Armature/GeneralSkeleton")

[node name="SophiaHips" type="BoneAttachment3D" parent="."]
transform = Transform3D(1.96566, 0.112264, -0.351512, -0.112968, 1.9968, 0.00600621, 0.351287, 0.0139518, 1.96886, 0.998667, 0.276122, -0.395636)
bone_name = "Hips"
bone_idx = 0
use_external_skeleton = true
external_skeleton = NodePath("../mini_sophia_noik/Armature/GeneralSkeleton")

[node name="MainSpotLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.246153, 0.969231, 0, -0.969231, -0.246153, 0, 4.5516, -0.26339)
light_color = Color(0.439216, 0.717647, 1, 1)
light_energy = 10.0
light_volumetric_fog_energy = 10.0
shadow_enabled = true
spot_range = 5.9
spot_angle = 48.6056

[node name="GdbotLight" type="SpotLight3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 0.498488, 0.866897, 0, -0.866897, 0.498488, 0, 3.9, 2.5)
light_color = Color(0.764706, 0.917647, 1, 1)
light_energy = 10.0
light_volumetric_fog_energy = 2.0
shadow_enabled = true
spot_range = 6.0
spot_attenuation = 0.5
spot_angle = 12.0
script = ExtResource("7_qcifm")
target = NodePath("../GdBotHips")

[node name="RobotDancerLight" type="SpotLight3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(0.906308, 0.366366, -0.21067, 0, 0.498488, 0.866897, 0.422618, -0.785675, 0.451783, -2, 3.9, 1.5)
light_color = Color(0.764706, 0.917647, 1, 1)
light_energy = 10.0
light_volumetric_fog_energy = 2.0
shadow_enabled = true
spot_range = 6.0
spot_attenuation = 0.5
spot_angle = 12.0
script = ExtResource("7_qcifm")
target = NodePath("../RobotDancerHips")

[node name="SophiaLight" type="SpotLight3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(0.906308, -0.366366, 0.21067, 0, 0.498488, 0.866897, -0.422618, -0.785675, 0.451783, 2, 3.9, 1.5)
light_color = Color(0.764706, 0.917647, 1, 1)
light_energy = 10.0
light_volumetric_fog_energy = 2.0
shadow_enabled = true
spot_range = 6.0
spot_attenuation = 0.5
spot_angle = 12.0
script = ExtResource("7_qcifm")
target = NodePath("../SophiaHips")

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_tn1i2")

[node name="Wall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2, -5.1)
mesh = SubResource("PlaneMesh_tn1i2")

[node name="GiantScreen" type="MeshInstance3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, 0, 2.9, -5)
material_override = SubResource("ShaderMaterial_tgrwk")
mesh = SubResource("PlaneMesh_fva8d")

[node name="BackgroundMusic" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.1, -2.4)
stream = ExtResource("7_uyuc6")
volume_db = -20.0
max_db = 0.0
autoplay = true

[editable path="mini_sophia_noik"]
[editable path="gdbot-noik"]
[editable path="RobotDanceModel"]
